--- a/menu.css
+++ b/menu.css
@@ -1,6 +1,6 @@
 body {
     margin: 5%;
-    background: url(imagens/background.png);
+    background: url(//lh3.googleusercontent.com/ebqljRkxTIq8mIF1_eTKMHsT0wfUeSNBjSN20MBG-AWCRqYyzGT1Lm0qvZW6WsLaZ6GuRw=s85);
     font-family: 'Lato';
     line-height: 1.5;
 }
@@ -142,7 +142,7 @@ ul {
     border-radius: 20px;
     margin: 10%;
     filter: alpha(opacity=60);
-    background-image: url("/imagens/fotoespaço/3.jpg");
+    background-image: url("//lh3.googleusercontent.com/3ywrNWNLGqmlxUc3G555psOpcLWPVzNN3kv0uUr5-bikoTo-fX810xMRML5Qg9LQ1HDTyQ=s113");
     background-color: #00000061;
     background-position-y: -580px;
     background-position-x: -1050px;
