--- a/application.css
+++ b/application.css
@@ -1,6 +1,6 @@
 body {
     margin: auto;
-    background: url("//lh3.googleusercontent.com/ebqljRkxTIq8mIF1_eTKMHsT0wfUeSNBjSN20MBG-AWCRqYyzGT1Lm0qvZW6WsLaZ6GuRw=s85");
+    background: url("https://fv2-1.failiem.lv/thumb_show.php?i=jx3twcd48&view");
     font-family: 'Lato';
     line-height: 1.5;
 }
