--- a/application.css
+++ b/application.css
@@ -1,6 +1,6 @@
 body {
     margin: auto;
-    background: url("https://fv2-1.failiem.lv/thumb_show.php?i=jx3twcd48&view");
+    background: url("https://photos.google.com/album/AF1QipMW-RTFm012sTxC7R8RKUvlthQwknwX5yB27CDc/photo/AF1QipML2laLks5c_wKTJoxuE5EKahzNfOKpVUM6hp9V");
     font-family: 'Lato';
     line-height: 1.5;
 }
