--- a/application.css
+++ b/application.css
@@ -49,7 +49,7 @@ header {
 main {
     margin: 5%;
     color: white;
-    background: url("https://drive.google.com/file/d/1SQTMgEzOs-o4Whf95xNbQ2OR-QeErmVV/view?usp=sharing");
+    background: url("https://lh3.googleusercontent.com/yNARgQ4H6EzSXJd_T5p4jOo1TIa6N_543LO4P5kNo9G18qv8CLpTGLa3Tsi9FR6crBPK1IJrThxFpJe4Ccr7vb4WmCCSM9SpCN_gSxkEiOYF0UBeW-GFMeFTtDhnDik5JA0wOnC9KtbRqddOqR6-JYFrZEv20wiCMNw6DaDpThSZbO_kTdoRUvllGpvLp4lu88jxpXqNJE1QOvc40KBQED6bdBeH5jcluhX3LXGJWJQ8nqPYNvGgLGYjn3lNpjej86HwowZkxIzdAvUdiXki4SC6z5u0KF7Lvbwo_1LZPh1bsWTwYtMmxmPsa1Mk2kEH4UhRpcMFASZUswuo-ZPzQcthn-yteP36eXcehLymytUnNhPc7HqOmHzVUq5-GGndEX2QjT2uXzUbme0omhpFRWozYR2Uw9TFovjXr1lyZBSDOyRxejBcBfnN0Ckrgoqec4NMuHCYTgAmZtsGgTRwNyds921mYECPHNgiV_4YIGvMOU9jNX5rELFB8enG-5Vq_GsaUp3dIJXQL7ZhMdUrgWcyDMVMArE7xvzLH_fQwYECO9nGmG2u-vqrM5sd7tWh9BqEPt2BqOMNguBcCi3tGGtFUEyIh1yu1swef-I2OZ9Jb6Kg8JDo-Ney76PP9y5FeXxhIVrLntSYf_BdesiIwF38mlE5SufxTiy3CqZJ3O0ht2gB-aGLdNwpGCpZNUVBUbQCxoARm3Wg-gCOrUmqvU4=w678-h903-no?authuser=0");
     padding: 5px 40px;
     margin-top: 20px;
     border-radius: 30px;
