--- a/application.css
+++ b/application.css
@@ -4,7 +4,15 @@ body {
     font-family: 'Lato';
     line-height: 1.5;
 }
-
+.endt {
+    padding: 5px 20px;
+    background-color: #ffffff9c;
+    border-radius: 20px;
+    margin: 10%;
+    color: rgb(5, 5, 5);
+    filter: alpha(opacity=100);
+    opacity: 1;
+}
 .espaçar {
     color: white;
 }
