--- a/application.css
+++ b/application.css
@@ -1,5 +1,6 @@
 body {
     margin: auto;
+    background-position:center;
     background: url("https://lh3.googleusercontent.com/HqMVvjpkEU42my5sV5A-bKIWbsxuT1kuqVa8sUnw1lgH_mBuYOj_wWLkgdiU0wqG6UBXO9vCVL9xCwMZ7PVx81SeyASkhlH9amOcnTgz1VQimgfjP327eXe-UntV4nFYxtiYSkmtkO0-RepVmq_XavUqEgVgva3MgrinJbMKhc80r0AD20D2CNBPx1sPjPoN2g07ioBMN6VGsR_BnRKI_F2jgKr8WfFCg0Hx1o5J2Gnf0ZsvfE62bCdAnm9okMTkd7mCk9in7v39gK4fIyUydHfk-JzkseIf-8wVIlPH5tKjN0ZYjo1d50tR8hVMFSz3syD72R4-xxWP3gVpfJ0i1QXH7HLogRV9WLS5kqJmt8ZFAqfWNL9W73to_PrpvAwxFdNvZeH1eRYyRaSMqCdqus5bTGHyY9mHuyCsUoTINergT6N0nKxiKkpleRRAF_GSiyo-vJXWrxonrRcNdF5F5fEOSewUwj1HwhVAEGGoOyrlo1Ngt_VhFgn94_EuPo4Q8XBFtXSAdjlFTlvtTpC2Dvm9A7cYieN45LxJaUlqhRTcjFvCnsUc_AYI_3L_bQP9q3cjcqVgjtNOwBERvP1zKJAqfVoj1QNfUeIyhe5RnJmPCYtOM8VoZ-YLfJQHdjSB3aAGHbtKQJmJAJZkcTBGDKu8fmBEVZeh5WoPHKF5oz8dhh5cnlmLPf3wYOoENMIJMO4qrkQka0YUf2F9Eds1FKM=w753-h903-no?authuser=0");
     font-family: 'Lato';
     line-height: 1.5;
