--- a/application.css
+++ b/application.css
@@ -1,7 +1,7 @@
 body {
     margin: auto;
     background-position:center;
-    background: url("https://lh3.googleusercontent.com/HqMVvjpkEU42my5sV5A-bKIWbsxuT1kuqVa8sUnw1lgH_mBuYOj_wWLkgdiU0wqG6UBXO9vCVL9xCwMZ7PVx81SeyASkhlH9amOcnTgz1VQimgfjP327eXe-UntV4nFYxtiYSkmtkO0-RepVmq_XavUqEgVgva3MgrinJbMKhc80r0AD20D2CNBPx1sPjPoN2g07ioBMN6VGsR_BnRKI_F2jgKr8WfFCg0Hx1o5J2Gnf0ZsvfE62bCdAnm9okMTkd7mCk9in7v39gK4fIyUydHfk-JzkseIf-8wVIlPH5tKjN0ZYjo1d50tR8hVMFSz3syD72R4-xxWP3gVpfJ0i1QXH7HLogRV9WLS5kqJmt8ZFAqfWNL9W73to_PrpvAwxFdNvZeH1eRYyRaSMqCdqus5bTGHyY9mHuyCsUoTINergT6N0nKxiKkpleRRAF_GSiyo-vJXWrxonrRcNdF5F5fEOSewUwj1HwhVAEGGoOyrlo1Ngt_VhFgn94_EuPo4Q8XBFtXSAdjlFTlvtTpC2Dvm9A7cYieN45LxJaUlqhRTcjFvCnsUc_AYI_3L_bQP9q3cjcqVgjtNOwBERvP1zKJAqfVoj1QNfUeIyhe5RnJmPCYtOM8VoZ-YLfJQHdjSB3aAGHbtKQJmJAJZkcTBGDKu8fmBEVZeh5WoPHKF5oz8dhh5cnlmLPf3wYOoENMIJMO4qrkQka0YUf2F9Eds1FKM=w753-h903-no?authuser=0");
+    background: url("https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/background.png?raw=true");
     font-family: 'Lato';
     line-height: 1.5;
 }
@@ -10,7 +10,7 @@ body {
     margin-right:5%;
     margin: 5%;
     color: white;
-    background: url("https://lh3.googleusercontent.com/0XYhtmiOWoz9-YUT5mlIXwMWTyCdvxJgOnH_3JBLL4bEfSSiM6HBawTeMAEaW-xcYYLJ0iwmuf6L8iPBDpY7C423xfHhWQ9OcdRjbWG43s9QNZmCqhYj62GEzMAXVE_CxVYlNKlchtESADTaRin_0FT2KAH294ilDYjgQ8BLL4YzgjyUDRtxsLDO-31ssxfM6m0nJQRKFxAl2u-mWfyANKS4LF5I7jyIsObwzs8kCjfEiC5Gp7ULkcz1DnmUtI5XytKSVTzC8bHNJhi0z4VR6R1WHPOCyPccmBBIQqSxEU8zMChRci7G37tciiV3uhOVK04nRlbShuj3cHyErNgk07C5f4FnRglgquvxJ6XWV3PNmKfCT3GnnSU7lvvpBTPiEHt3Fv0-_V85ie76gPodfMtPKFP7G_Jx1G3zKmpkHaznodA-tzU9BTVgYwHO-kzRWvTId7wMae8PoT360Ae0Dnr6-GS0o03UYGqCmURGPRn0vgsK2dB9lQg_skrMsSFAu7Pn3f897qocNlWp1_cgpfKV_jrXABGEMB7LHPnHnfi30Kae5wzqu9_OGgGsRcbUVLtn_gQ_p0pwbsFPfrTwwP10qCW_efzpxhap1W_7-J8-9zj9bma7el3vJBqdouXzUKjIEcV8fxfid1OETfr8lZLANR0ZEw-7peLXMLp6T3nMz49zq2Pcqk2p-M1LaH33ltvUEsWhB3U5OyoaF5V95nY=w712-h949-no?authuser=0");
+    background: url("https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/11.jpg?raw=true");
     margin-top: 20px;
     border-radius: 30px;
     text-align: center;
