--- a/menu.css
+++ b/menu.css
@@ -1,6 +1,6 @@
 body {
     margin: 5%;
-    background: url(https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/background.png);
+    background: url(https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/background.png?raw=true);
     font-family: 'Lato';
     line-height: 1.5;
 }
@@ -144,7 +144,7 @@ ul {
     border-radius: 20px;
     margin: 10%;
     filter: alpha(opacity=60);
-    background-image: url("https://lh3.googleusercontent.com/MD7xLpRkcY55Gwbwi5T5XrHoyVYJ0NQUElP3C-hcPpcD7e1TXPr7F4gl1Zmn97oFKScs1jwdUHRSwd_7lwpZxSl8gtHwegQHWFeYHm20QTSw-MT8dHEot8-QP-7viK3Zk5OOr9TtShN97un4ARoY7MzTkk7YRDKVsW09CqG2ooZTsWH1Q0IW_voAHLMbNN0U0XZ-AmPHPPxVoXGEcmeqkruNNJYf9s57dUEUd7StLbAMEtx_aF7cdrkjVAXqAHs8ew8Nsh6X_8ImqupkDunNXuL3lx92RTlqVVY2Saja-zzu4c3lK3kpo29dKRSrtk--ieBh9StSoEuMRJnxE9NM1CLOHttQQoAfkCJCpkW06Xae2YjnvZEVE90VSQW9vfjY5ewSLBYtvZaLCSI5rgyOOTy2dldOpYg0HV0ud39ycoZQXbx20-esD6mzKweXTBVYxqCvZn2pmi6I3bUo4ZGoq7XskXQaZbQQC1q3dmarui1LibGoFE_BY0856JfQQ3xle2L4SV0Het30Xw-URT5iWCjQ1kqROlxGYrr7xOrLxB_G0PtctOeC_mC3hoI2_WDvVvSWeloi0bwjHgMsFsu7GesKb80UC-Z4rEXiXfI8GeHF1EUpo2XbVhZdtkzEqIVEbLY_rWZoBuE3i-hqUFAtHwL7Rvi2r9BOUAqkuPZ8L5WdsMFi_5y-hbKqRJaHhK5vNpRtgFHy5RD0DNdf4IokuYs=w1080-h810-no?authuser=0");
+    background-image: url("https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/4.jpg?raw=true");
     background-color: #00000061;
     background-position-y: -580px;
     background-position-x: -1050px;
