--- a/application.css
+++ b/application.css
@@ -14,6 +14,8 @@ body {
     margin-top: 20px;
     border-radius: 30px;
     text-align: center;
+    background-position-x: -100px;
+    background-position-y: -550px;
 }
 .espaçar {
     color: white;
