--- a/menu.css
+++ b/menu.css
@@ -114,13 +114,26 @@ ul {
     border: 2px inset black;
 }
 
+.botão2 {
+    color: rgba(136, 136, 136, 0.966);
+    display: inline;
+    text-align: center;
+    width: 350px;
+    height: 45px;
+    border-color: transparent;
+    padding: 5px, 20px;
+    border-radius: 25px;
+    margin: 10px 15px 5px 5px;
+    background: white;
+}
+
 .botão {
     color: black;
     display: inline;
     text-align: center;
     width: 350px;
     height: 45px;
-    border: 4px inset #000000;
+    border-color: transparent;
     padding: 5px, 20px;
     border-radius: 25px;
     margin: 10px 15px 5px 5px;
