--- a/application.css
+++ b/application.css
@@ -51,7 +51,7 @@ header {
     margin: 10px 15px 5px 5px;
     background: white;
 
-main {
+.maim {
     margin: 5%;
     color: white;
     background: url("https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/2.jpg?raw=true");
