--- a/profile/login.css
+++ b/profile/login.css
@@ -170,7 +170,7 @@ color:inherit;
 word-break:normal}
  .pre-scrollable{max-height:340px;
 overflow-y:scroll}
- .container{width:100%;
+ .container{width:auto;
 padding-right:15px;
 padding-left:15px;
 margin-right:auto;
