--- a/profile/mail.css
+++ b/profile/mail.css
@@ -65,6 +65,9 @@ body{
     float: left;
     height: 41px;    
 }
+.needname{
+    color:yellow;
+}
 .btn{
     margin-left: .25rem;
     margin-right: .25rem;
