--- a/UE/Praxes/css/geral.css
+++ b/UE/Praxes/css/geral.css
@@ -5,42 +5,30 @@ body{
 .titulo{
     text-align: center;
 }
-.conteiner5{
-    margin-left: 10px;
-    margin-right: 10px;
+.conteiner{
+    margin:1% 5% ;
 }
-#infoalways{
+.btn{
+    width: 20vw ;
+    height: 4vh;
     text-align: center;
-    color: black !important;
-    font-size: xx-large;
-}
-.infocomplement{
-    font-size: large !important ;
-}
-.info{
-    position: absolute;
-    font-size: large;
-    color:transparent ;
-    text-align: center;
-    margin-left: 30%;
-    margin-right: 30%;
-    display:inline-block;
-    user-select:none;
-    background-color:transparent;
-    border:1px solid transparent;
-    padding: .375rem 2rem;
-    font-size:1rem;
-    line-height:1.5;
-    border-radius:1.85rem;
-    transition:color .15s ease-in-out;
-    background-color: .15s ease-in-out;
-    border-color: .15s ease-in-out;
-    box-shadow: .15s ease-in-out;
-    background-color: rgba(240, 248, 255, 0.692);
-}
+    margin-left:40vw ;
+    border: 2px solid black;
+    border-radius: 10px;
+    margin: 10px 40vw;
 
- .info:hover{
-    color:black;
+}
+#info{
+    position:absolute;
+    border: 3px solid black;
+    margin-left: 25vw;
+    width: 40vw;
+    height: 20vh;
+    border-radius: 1.85rem;
+    align-items: center;
+    text-align: center;
+    padding: 5px 5px;
+    background-color: rgba(240, 248, 255, 0.9);
 }
 
 .Excel{
