--- a/UE/Praxes/css/geral.css
+++ b/UE/Praxes/css/geral.css
@@ -23,7 +23,7 @@ body{
     border: 3px solid black;
     margin-left: 25vw;
     width: 40vw;
-    height: 20vh;
+    height:200px;
     border-radius: 1.85rem;
     align-items: center;
     text-align: center;
