--- a/UE/Praxes/Despesas/css/style.css
+++ b/UE/Praxes/Despesas/css/style.css
@@ -1,6 +1,16 @@
+table{
+    table-layout: fixed;
+    box-sizing: border-box;
+    border-collapse: collapse;
+}
 th{
     border-bottom: 2pt solid black;
     height: 40px;
+}
+
+tbody{
+    margin-top: 60px;
+    overflow: auto;
 }
 tfoot{
     border-top: 2pt solid black;
@@ -9,8 +19,11 @@ tfoot{
     border-top: 2pt solid black;
     border-bottom: 2pt solid black;
 }
+.Week:hover{
+    background-color: grey;
+}
 tr{
-    height: 60px;
+    /*height: 60px;*/
     max-height: 60px;
     
 }
