--- a/UE/Praxes/Despesas/css/style.css
+++ b/UE/Praxes/Despesas/css/style.css
@@ -1,4 +1,35 @@
 table{
+    border-collapse: collapse;
+    width: 80vw;
+    margin-left: 10vw;
+}
+tr:nth-child(even){
+    background-color: #e5e5e5;
+    -webkit-column-break-after: 0px;
+}
+
+thead{
+    border-bottom: 2px solid black;
+    height: 40px;
+    position: relative;
+}
+tfoot{
+    border-top: 2px solid black
+}
+.Week{
+    border-bottom: 2px solid black;
+    border-top: 2px solid black;
+    background-color: white !important;
+}
+.center{
+    text-align: center;
+}
+#dis{
+    height:50vh;
+    width: 90vw;
+    margin-left: 5vw;
+}
+/*table{
     table-layout: fixed;
     box-sizing: border-box;
     border-collapse: collapse;
@@ -18,12 +49,13 @@ tfoot{
 .Week{
     border-top: 2pt solid black;
     border-bottom: 2pt solid black;
+    height: 60px;
 }
 .Week:hover{
     background-color: grey;
 }
 tr{
-    /*height: 60px;*/
+    height: 60px;
     max-height: 60px;
     
 }
@@ -75,3 +107,4 @@ tr:nth-child(even) {
 #left{float: left; } 
 #center{ text-align: center; } 
 #right{float: right; }  
+*/
